--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="menu">
         <img src="images/icon.png" alt="icon">
       </div>
-      <ul id="spisok">
+      <ul id="list">
         <li><a href="#">psd websites</a></li>
         <li><a href="#">ui kits</a></li>
          <li><a href="#">premium psd files</a></li>
@@ -22,7 +22,7 @@
         <li><a href="#">bloc</a></li>
       </ul>
     </header>
-    <section>
+    <section class="awesome">
       <h1>Awesome Free PSD<br>templates &amp; Resources</h1>
       <a href="#">www.BlazRobar.com</a>
       <img src="images/arrow.png" alt="arrow">
