Сделана более резиновая верстка
Исправленная ошибка с неравномерным сжатием картинок. Блоки стали более резиновыми. Верхняя менюшка зафиксирована.

--- a/index.html
+++ b/index.html
@@ -34,14 +34,10 @@
       </div>
     </div>
     <main>
-      <div class="arrow">
-        <img src="images/arrow.png" alt="arrow">
-      </div>
-      <div class="foto">
-        <img src="images/img1.png" alt="img1">
-        <img src="images/img2.png" alt="img2">
-        <img src="images/img3.png" alt="img3">
-      </div>
+      <img src="images/1.png" alt="arrow">
+      <img src="images/img1.png" alt="img1">
+      <img src="images/img2.png" alt="img2">
+      <img src="images/img3.png" alt="img3">
     </main>
     <div class="content">
       <a href="#">BlazRobar.com</a>
