Font-awesome connection and icon replacement for icon font. But there is a problem, the size of the icons does not change.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -19,13 +20,13 @@
         <li><a href="#">ui kits</a></li>
          <li><a href="#">premium psd files</a></li>
         <li><a href="#">about</a></li>
-        <li><a href="#">bloc</a></li>
+        <li><a href="#">blog</a></li>
       </ul>
     </header>
     <section class="awesome">
       <h1>Awesome Free PSD<br>templates &amp; Resources</h1>
       <a href="#">www.BlazRobar.com</a>
-      <img src="images/arrow.png" alt="arrow">
+      <i class="fa fa-angle-right" aria-hidden="true"></i>
     </section>
     <div class="like">
       <span>I'm like the Robin Hood of PSD files.</span>
