Error with the size of the icons fixed.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul id="list">
         <li><a href="#">psd websites</a></li>
         <li><a href="#">ui kits</a></li>
-         <li><a href="#">premium psd files</a></li>
+        <li><a href="#">premium psd files</a></li>
         <li><a href="#">about</a></li>
         <li><a href="#">blog</a></li>
       </ul>
@@ -31,7 +31,7 @@
     <div class="like">
       <span>I'm like the Robin Hood of PSD files.</span>
       <div>
-        <img src="images/arrow.png" alt="arrow">
+        <i class="fa fa-angle-right arrow2" aria-hidden="true"></i>
       </div>
     </div>
     <main>
